[gd_scene load_steps=7 format=3]

[ext_resource type="Script" path="res://src/scenes/Game.gd" id=1]
[ext_resource type="PackedScene" path="res://src/visual/BackgroundController.tscn" id=2]
[ext_resource type="Script" path="res://src/game/BoardView.gd" id=3]
[ext_resource type="Theme" path="res://src/ui/UiTheme.tres" id=4]
[ext_resource type="Script" path="res://src/ui/LiquidGlassButton.gd" id=5]

[node name="Game" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 4 )
script = ExtResource( 1 )

[node name="BackgroundController" parent="." instance=ExtResource( 2 )]

[node name="MidVFX" type="Node2D" parent="."]

[node name="BoardView" type="Node2D" parent="."]
script = ExtResource( 3 )
position = Vector2(156, 420)

[node name="UI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="TopBarBg" type="ColorRect" parent="UI"]
anchor_left = 0.03
anchor_top = 0.03
anchor_right = 0.97
anchor_bottom = 0.14
color = Color(0.02, 0.05, 0.1, 0.48)

[node name="TopBar" type="HBoxContainer" parent="UI"]
anchor_left = 0.05
anchor_top = 0.05
anchor_right = 0.95
anchor_bottom = 0.12
alignment = 1
theme_override_constants/separation = 18

[node name="Score" type="Label" parent="UI/TopBar"]
text = "Score: 0"
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 34

[node name="Pause" type="Button" parent="UI/TopBar"]
script = ExtResource( 5 )
text = "Pause"
custom_minimum_size = Vector2(180, 84)

[node name="Powerups" type="HBoxContainer" parent="UI"]
anchor_left = 0.06
anchor_top = 0.79
anchor_right = 0.94
anchor_bottom = 0.87
alignment = 1
theme_override_constants/separation = 14

[node name="Undo" type="Button" parent="UI/Powerups"]
script = ExtResource( 5 )
text = "Undo x0"
custom_minimum_size = Vector2(0, 90)
size_flags_horizontal = 3

[node name="RemoveColor" type="Button" parent="UI/Powerups"]
script = ExtResource( 5 )
text = "Prism x0"
custom_minimum_size = Vector2(0, 90)
size_flags_horizontal = 3

[node name="Shuffle" type="Button" parent="UI/Powerups"]
script = ExtResource( 5 )
text = "Shuffle x0"
custom_minimum_size = Vector2(0, 90)
size_flags_horizontal = 3

[node name="PowerupFlash" type="ColorRect" parent="UI"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(1, 1, 1, 0)

[connection signal="pressed" from="UI/TopBar/Pause" to="." method="_on_pause_pressed"]
[connection signal="pressed" from="UI/Powerups/Undo" to="." method="_on_undo_pressed"]
[connection signal="pressed" from="UI/Powerups/RemoveColor" to="." method="_on_remove_color_pressed"]
[connection signal="pressed" from="UI/Powerups/Shuffle" to="." method="_on_shuffle_pressed"]
